close #28 : add rect, circle and triangle form + fix min bug : user can jump and go right or left

--- a/src/main.css
+++ b/src/main.css
@@ -2,10 +2,11 @@ html, body {
     display: block;
     height: 100%;
     overflow: hidden;
+    background-color: #222;
 }
 
 canvas {
-    border: 1px solid #000;
+    border: 1px solid #444;
     position: absolute;
     top: 10%;
     left: 10%;
